Add mammoth.js dependency for DOCX support

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.6.2",
+    "mammoth": "^1.6.0",
     "openai": "^4.20.1",
     "pdfjs-dist": "^3.4.120",
     "react": "^18.2.0",
@@ -21,23 +22,4 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
-}
+  }}
